cmake_minimum_required(VERSION 3.10)

project(LAB6 LANGUAGES C CXX)

set(SOURCES 
    ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp)

add_executable(LAB6 ${SOURCES})

set_target_properties(LAB6 PROPERTIES
    CXX_STANDARD 17
    CXX_STANDARD_REQUIRED YES
    OUTPUT_NAME 181201033_lab6
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})