project(VARIABLES LANGUAGES CXX)

cmake_minimum_required(VERSION 3.10)

set(SOURCES
${CMAKE_CURRENT_SOURCE_DIR}/main.cpp)

add_executable(VARIABLES ${SOURCES})

target_include_directories(VARIABLES PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})

set_target_properties(VARIABLES PROPERTIES
    CXX_STANDARD 17
    CXX_STANDARD_REQUIRED YES
    OUTPUT_NAME variables
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
)