project(COLLATZ LANGUAGES C CXX)

cmake_minimum_required(VERSION 3.10)

set(SOURCES 
    ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp)

add_executable(COLLATZ ${SOURCES})

set_target_properties(COLLATZ PROPERTIES
    CXX_STANDARD 17
    CXX_STANDARD_REQUIRED YES
    OUTPUT_NAME COLLATZ
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})